corrected head size on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,4 +84,9 @@
     .projects {
         grid-template-columns: repeat(1, 1fr);
     }
+
+    .bio-image{
+        max-width: 60vw !important;
+    }
+
 }
